-
Bug
-
Resolution: Done
-
P1: Critical
-
5.7.0 Beta
-
None
-
ca6762abde85fe3104ec4f064b85319474ba2deb
Reloading the page rendered in a WebEngineView results in the web page unable to access `window.qt` in JavaScript for creating a channel. This is a regression from 5.6.
The object exists on the view creation step and so works on first run through. A `reload()` of the page is enough to lose the object. Is this expected, or a genuine bug? If expected, what should the application do to re-establish the channel/`window.qt` on reload?
Attached is a modified version of http://blog.trumpton.org.uk/2015/09/qt-webengineview-communication-with.html in an attempt to provide a minimal environment - but we stumbled into it on our project over at https://github.com/plexinc/plex-media-player - since reloading the page is a valid error handling state.
| For Gerrit Dashboard: QTBUG-53411 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 162114,3 | Fix the IPC webChannelTransport not being available on reload | 5.7 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 165892,2 | Reinstall the webChannelTransport on render process switch | 5.7 | qt/qtwebengine | Status: MERGED | +2 | 0 |